# autoswitcher

./: .cdtbuild
ScimPanelController/: .cdtbuild  .cdtbuild_initial  .cproject  .project  AUTHORS  COPYING  INSTALL  Makefile.am  configure  configure.ac  makefile.targets  scimpanelcontroller.pc.in
ScimPanelController/src/: Makefile.am  scim_panelcontrol_client.cpp  scim_panelcontrol_client.h
TestApp/: .cdtbuild  .cproject  .project
TestApp/src/: test_app.cpp
scim-panelcontroller-1.0.0/: .cproject  Makefile.am  configure.ac  scimpanelcontroller.pc.in
scim-panelcontroller-1.0.0/debian/: changelog  control  control~
scim-panelcontroller-1.0.0/src/: scim_panelcontrol_client.h
scim-panelcontroller-1.0.1/: .project  README  configure.ac
scim-panelcontroller-1.0.1/debian/: changelog  control
scim-panelcontroller-1.0.1/src/: Makefile.am  scim_panelcontrol_client.cpp
src/: scim_autoswitcher.cpp  scim_autoswitcher.h  scim_panelcontrol_client.cpp  scim_panelcontrol_client.h
