lib_LTLIBRARIES = lib@LIBRARY_NAME@.la
include_HEADERS = scim_panelcontrol_client.h
lib@LIBRARY_NAME@_la_SOURCES = scim_panelcontrol_client.cpp scim_panelcontrol_client.h
lib@LIBRARY_NAME@_la_CPPFLAGS = @SCIM_CFLAGS@
lib@LIBRARY_NAME@_la_LIBADD = -lX11 @SCIM_LIBS@
lib@LIBRARY_NAME@_la_LDFLAGS = -version-info 1:0:0 -no-undefined
